Prevent post dates from wrapping in archive

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -53,6 +53,7 @@
 .post-date,
 .post-list {
   font-family: "Hack";
+  text-wrap: nowrap;
 }
 
 .post,
